dev: Added suggestions and tested network forward result.

--- a/test_vae.ipynb
+++ b/test_vae.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from src.vak.nets.ava import Ava\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_shape = (3, 128, 512)\n",
+    "input = torch.zeros(x_shape)\n",
+    "net = Ava(x_shape=(x_shape[1], x_shape[2]))\n",
+    "output, _ = net.forward(input)\n",
+    "assert output.shape == x_shape, 'Error'"
+   ]
   }
  ],
  "metadata": {
